@@ -21,21 +21,21 @@ public class Pair<E> extends AbstractCollection<E> {
         items = List.copyOf(collection);
     }
 
-    public static <E> Pair<E> of(E itemA, E itemB){
+    public static <E> Pair<Object> of(E itemA, E itemB) {
         return new Pair<>(itemA, itemB);
     }
 
-    public E getFirst(){
-        return items.get(0);
+    public E getFirst() {
+        return items.getFirst();
     }
 
-    public E getSecond(){
+    public E getSecond() {
         return items.get(1);
     }
 
     @Override
     public int size() {
-        return 2;
+        return SIZE;
     }
 
     @Override
